removed redundant path to Figures as relative path was declared in main file

--- a/Gaps and Recommendations.tex
+++ b/Gaps and Recommendations.tex
@@ -14,7 +14,7 @@ When we step back and look at the paper publications as a whole, a clear problem
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=\textwidth]{STORM-AI Deliverable-1/Figures/CoreSummary.png}
+    \includegraphics[width=\textwidth]{CoreSummary.png}
     \caption{Data displayed in percentages based on context categories}
     \label{fig:llm3_scoring_percentage}
 \end{figure}
