--- a/Graphical view of the Results.tex
+++ b/Graphical view of the Results.tex
@@ -102,7 +102,7 @@ Figure~\ref{fig:manual_scoring} presents the results from our human categorizati
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{STORM-AI Deliverable-1/Figures/HumanScoring.png}
+    \includegraphics[width=\textwidth]{HumanScoring.png}
     \caption{Manual human categorization matrix showing distribution of papers across organizational tiers (rows) and systems engineering lifecycle phases (columns). This serves as ground truth for validating LLM categorization performance. Numbers represent paper counts assigned to each cell.}
     \label{fig:manual_scoring}
 \end{figure}
