--- a/combined345.tex
+++ b/combined345.tex
@@ -145,7 +145,7 @@ Our survey gathered documents that detail the approaches suggested by Government
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1\linewidth]{Figures/Rubric.png}
+    \includegraphics[width=1\linewidth]{Rubric.png}
     \caption{NIST 800-160 Based Review of AI Articles and Reports Rubric}
     \label{fig:rubric}
 \end{figure}
