--- a/execSummary-jcoh.tex
+++ b/execSummary-jcoh.tex
@@ -25,7 +25,7 @@ Only 9,183 (16.8\%) of the 54,628 AI papers examined addressed any aspect of AI 
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1.0\linewidth]{STORM-AI Deliverable-1/Figures/Paper-Classification-Results.jpg}
+    \includegraphics[width=1.0\linewidth]{Paper-Classification-Results.jpg}
     \caption{\it Results of searching and classifying 54,628 AI papers: fewer than 16.8\% address AI Trustworthiness, Reliability, or Security; few or none of those address organizational or mission requirements. \textbf{Mission Assurance is completely neglected.}}
     \label{fig:heatmapAlt}
 \end{figure}
